<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Unlock The Treasure Box!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txtFind">Find:</string>
    <string name="btnNewGame">New Game</string>
    <string name="btnUnCover">UnCover</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="txtResultValue_Success">Congratulations, you unlocked the treasure chest!</string>
    <string name="txtResultValue_Failure">Sorry! Try again ..</string>
    <string name="txtResultElapsed">Time elapsed :</string>
    <string name="btnExit">Exit</string>
    <string name="btnTryAgain">Try Again</string>

</resources>
